--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
   "license": "MIT",
   "keywords": [],
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.12",
     "evt": "^2.5.7",
     "keycloakify": "^9.6.6",
     "oidc-spa": "^4.5.0",
     "powerhooks": "^1.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-imask": "^7.6.0",
     "tsafe": "^1.6.6",
     "zod": "^3.22.4"
   },
@@ -49,7 +53,9 @@
     "storybook": "^8.0.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
-    "vite-plugin-commonjs": "^0.10.1"
+    "vite-plugin-babel-macros": "^1.0.6",
+    "vite-plugin-commonjs": "^0.10.1",
+    "vite-tsconfig-paths": "^4.3.1"
   },
   "_comment": "See https://github.com/storybookjs/storybook/issues/22431#issuecomment-1630086092",
   "resolutions": {
